--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                     <div>
                       <span
                         class="position-absolute translate-middle badge rounded-pill price_badge">
-                        ₹ 2.61 Cr* Onwards
+                        2.61 Cr* Onwards
                       </span>
                     </div>
                     <h5 class="card-title">2 BHK</h5>
@@ -288,7 +288,7 @@
                     <div>
                       <span
                         class="position-absolute translate-middle badge rounded-pill price_badge">
-                        ₹ 3.96 Cr* Onwards
+                        3.96 Cr* Onwards
                       </span>
                     </div>
                     <h5 class="card-title">3 BHK</h5>
